--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
             <version>1.5.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.univocity/univocity-parsers -->
+        <dependency>
+            <groupId>com.univocity</groupId>
+            <artifactId>univocity-parsers</artifactId>
+            <version>2.4.1</version>
+        </dependency>
+
 
     </dependencies>
 </project>
